@@ -14,6 +14,9 @@ Bug fixes
 * Changes in directories that haven't been modified are now picked up again.
   (Robert Collins, lp:593610)
 
+* Verbose mirroring is now clearer about the fact local files with the right
+  content are simply skipped over. (Robert Collins)
+
 Changes
 +++++++
 
